Bug 126066 - Changing caret (cursor) color. r=tor@acm.org, sr=dbaron@dbaron.org